test_regress/t/t_interface_modport_dir_bad.out
%Error: t/t_interface_modport_dir_bad.v:41:24: Port connection 'ctrl' expected 'source' interface modport on pin connection but got 'sink' modport.
                                             : ... note: In instance 't.source_i'
   41 |   sourceMod source_i (.ctrl);
      |                        ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
